--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "cheerio": "^1.0.0-rc.12",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "puppeteer": "^21.3.1"
     }
 }
